fix(src/styles/global.css): make sure links break between words
otherwise layouts on phones may get messed up

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -141,6 +141,10 @@ pre {
 	box-sizing: border-box;
 }
 
+a {
+	word-break: break-all;
+}
+
 li > a, p > a {
 	color: var(--accent-color);
 }
